# test_cicd

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yaml  test.yml
Docker/: .dockerignore  api.Dockerfile  ui.Dockerfile
UI/: interface.py
agent/: my_agent.py
test/: test_main.py
tests/: test_main.py
