[project]
name = "test-cicd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "langchain>=1.2.13",
    "langchain-mistralai>=1.1.2",
    "pytest>=9.0.2",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]